// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Border > handles responsive value 1`] = `
{
  "classNames": [
    "_root_5fd06f",
    "_null_5fd06f",
    "_--border-neutral--m_5fd06f",
    "_--border-transparent--l_5fd06f",
  ],
}
`;

exports[`Styles/Border > handles undefined value 1`] = `null`;

exports[`Styles/Border > handles value 1`] = `
{
  "classNames": [
    "_root_5fd06f",
    "_--border-primary_5fd06f",
  ],
}
`;
